--- a/app/templates/thumbnail/index.html
+++ b/app/templates/thumbnail/index.html
@@ -954,7 +954,7 @@ html.dark .history-section {
     <div class="thumbnail-header">
         <h1 class="thumbnail-title">
             <i class="ph ph-image"></i>
-            Thumbnail
+            AI Thumbnail Editor
         </h1>
     </div>
 
